# sparks-rss

./: LICENSE  Makefile  README.md  build.sh  dune-project  run.sh  sparks_rss.opam
lib/: dune  epub3.ml  epub3.mli  epub_types.mli  http.ml  ocf_container_f.ml  ocf_container_f.mli  ocf_container_sig.mli  ocf_nav.ml  ocf_nav.mli  ocf_ncx_f.ml  ocf_ncx_f.mli  ocf_ncx_sig.mli  ocf_package_f.ml  ocf_package_f.mli  ocf_package_sig.mli  ocf_xml.ml  ocf_xml_sig.mli  spark.ml  syndications.ml  syndications.mli  uuid.ml  uuid.mli  webdriver.ml  webdriver.mli
resources/: rss  rss_minimal  rss_short
test/: dune
