(lang dune 3.16)

(name sparks_rss)

(generate_opam_files true)

(source
 (github ancantus/sparks-rss))

(authors "Ryan Estep")

(maintainers "Ryan Estep")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name sparks_rss)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
